--- a/app/src/components/Navigation/MainNavigation.css
+++ b/app/src/components/Navigation/MainNavigation.css
@@ -24,19 +24,28 @@
     margin: 0 0 0 1.5rem;
     padding: 0;
     list-style: none;
+    align-items: center;
 }
 
 .main-navigation__items li {
     margin: 0 1rem;
 }
 
-.main-navigation__items a {
+.main-navigation__items a,
+.main-navigation__items button {
     text-decoration: none;
     color: #000;
+    border: none;
+    font: inherit;
+    background: transparent;
+    cursor: pointer;
+    margin: 0;
 }
 
 .main-navigation__items a:hover,
 .main-navigation__items a:active,
-.main-navigation__items a.active{
+.main-navigation__items a.active,
+.main-navigation__items button:hover
+.main-navigation__items button:active{
     color: blue;
 }
