--- a/app/src/index.css
+++ b/app/src/index.css
@@ -4,6 +4,17 @@ body {
   font-family: sans-serif;
 }
 
+.form-control label,
+.form-control input,
+.form-control textarea {
+  width: 100%;
+  display: block;
+}
+
+.form-control label {
+  margin-bottom: 0.5rem;
+}
+
 .form-actions button,
 .btn {
   background: #01d1d1;
